Right column scrolls to hard bottom now

--- a/public/suggestions.html
+++ b/public/suggestions.html
@@ -1,1 +1,1 @@
-<p>94282: What's up?!</p>
+<p>101301: To test their crime-eradicating cyborgs, the company leads street cop Alex Murphy (Peter Weller) into an armed confrontation with crime lord Boddicker (Kurtwood Smith) so they can use his body to support their untested RoboCop prototype.</p>
